# jacc-hammer

./: .darglint  .flake8  .pre-commit-config.yaml  README.md  noxfile.py  pyproject.toml  requirements.txt  setup.py
docs/: conf.py  index.rst  reference.rst
jacc_hammer/: __init__.py  fuzzy_hash.py  lshhybrid.py  name_clean.py  tests.py  top_matches.py  version.py
src/jacc_hammer/: __init__.py  console.py
tests/: __init__.py  test_console.py
