[tool.poetry]
name = "jacc-hammer"
version = "0.0.0"
description = "Python library for fuzzy matching large data sets."
license = "MIT"
readme = "README.md"
homepage = "https://github.com/nestauk/jacc-hammer"
repository = "https://github.com/nestauk/jacc-hammer"
authors = ["bishax <alex.bishop@nesta.org.uk>"]

[tool.poetry.dependencies]
python = "^3.6"
pandas = "0.25"
joblib = "^0.14.1"
numpy = "^1.18.1"
scipy = "^1.4.1"
tqdm = "^4.43.0"
cytoolz = "^0.10.1"
datasketch = "^1.5.0"
fuzzywuzzy = "^0.18.0"
scikit-learn = "^0.22.2"
nltk = "^3.4.5"
python-Levenshtein = "^0.12.0"
cython = "^0.29.15"
click = "^7.1.1"
importlib-metadata = {version = "^2.0.0", python = "<3.8"}

[tool.poetry.dev-dependencies]
pytest = "^5.3.5"
coverage = {extras = ["toml"], version = "^5.0.3"}
pytest-cov = "^2.8.1"

[tool.poetry.scripts]
jacc-hammer = "jacc_hammer.console:main"

[tool.coverage.paths]
source = ["src", "*/site-packages"]

[tool.coverage.run]
branch = true
source = ["jacc_hammer"]

[tool.coverage.report]
show_missing = true

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
