[tool.poetry]
name = "jacc-hammer"
version = "0.0.1"
description = "Python library for fuzzy matching large data sets."
license = "MIT"
readme = "README.md"
homepage = "https://github.com/nestauk/jacc-hammer"
repository = "https://github.com/nestauk/jacc-hammer"
authors = ["bishax <alex.bishop@nesta.org.uk>"]
documentation = "https://nesta-jacc-hammer.readthedocs-hosted.com/en/latest/?badge=latest"

[tool.poetry.dependencies]
python = "^3.6.1"
click = "^7.1.1"
importlib-metadata = {version = "^2.0.0", python = "<3.8"}

[tool.poetry.dev-dependencies]
pytest = "^5.3.5"
coverage = {extras = ["toml"], version = "^5.0.3"}
pytest-cov = "^2.8.1"
black = "^20.8b1"
flake8 = "^3.8.4"
mypy = "^0.790"
pytest-mock = "^3.3.1"
ipykernel = "^5.3.4"
flake8-bandit = "^2.1.2"
flake8-black = "^0.2.1"
flake8-bugbear = "^20.1.4"
flake8-import-order = "^0.18.1"
flake8-docstrings = "^1.5.0"
flake8-annotations = "^2.4.1"
darglint = "^1.5.5"
Sphinx = "^3.3.1"
sphinx-autodoc-typehints = "^1.11.1"

[tool.poetry.scripts]
jacc-hammer = "jacc_hammer.console:main"

[tool.coverage.paths]
source = ["src", "*/site-packages"]

[tool.coverage.run]
branch = true
source = ["jacc_hammer"]

[tool.coverage.report]
show_missing = true

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
